# fin-ai

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
retirement_planner/: __init__.py  __main__.py  agent.py  analysis.py  cli.py  file_parser.py  formatter.py  history.py  models.py  serialization.py  streamlit_app.py  tools.py  web.py
retirement_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
samples/: README.md  bank_statements.csv  credit_cards.csv  investment_statement.csv  personal_info.json  spending_transactions.csv
static/: index.html
tests/: conftest.py  test_agent.py  test_cli.py  test_e2e.py  test_file_parser.py  test_formatter.py  test_models.py  test_serialization.py  test_tools.py  test_web.py
